[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/GameOverScreen.gd" type="Script" id=1]
[ext_resource path="res://Fonts/MochiyPopPOne-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.713726 )
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 0.913725, 0.301961, 0.301961, 1 )
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=6]
size = 100
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 70
outline_size = 3
outline_color = Color( 0, 0, 0, 0.509804 )
extra_spacing_char = 3
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="GameOverScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backgroound" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 270.0
margin_bottom = -270.0
color = Color( 0, 0, 0, 0.313726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -382.0
margin_top = -162.0
margin_right = 393.0
margin_bottom = 166.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 755.0
margin_bottom = 308.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 10.0
margin_right = 735.0
margin_bottom = 155.0
custom_colors/font_color = Color( 0.913725, 0.301961, 0.301961, 1 )
custom_fonts/font = SubResource( 6 )
text = "GAME OVER"

[node name="MainMenuButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_left = 115.0
margin_top = 175.0
margin_right = 619.0
margin_bottom = 278.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color = Color( 0.835294, 0.823529, 0.054902, 0.784314 )
custom_colors/font_color_hover = Color( 0.835294, 0.823529, 0.054902, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "MAIN MENU"

[node name="Tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[connection signal="pressed" from="PanelContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
